--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -55,5 +55,134 @@
 				available anytime - or to the camera shy.
 			</div>
 		</article>
+		<article id="courses">
+			<h2>Courses</h2>
+			<div class="boxes">
+				<div class="side1">
+					<h3><img src="images/wireframe.png" alt="" class="icon"></h3>
+					<h3>Basic Web Dev</h3>
+					This course will take you from zero to web hero, so no prior experience 
+					with HTML or CSS necessary! You'll learn the most important aspects 
+					of both HTML and CSS as you build a complete 5 page website from the 
+					ground up. Along the way, you'll see how to code cutting-edge great
+					looking sites as well as tried and true techniques.
+					$500 - <a href="/moodle/course/view.php?id=13"> Enroll now for course starting
+					March 1st, 2019</a>!
+					<ul>
+						<li>HTML Tags &amp; attributes</li>
+						<li>CSS Properties &amp; values</li>
+						<li>Smooth Transitions</li>
+						<li>Animations</li>
+					</ul>
+				</div>
+				<div class="side2">
+					<h3><img src="images/web-design.png" alt="" class="icon"></h3>
+					<h3>Mobile Web Dev</h3>
+					This course is designed as direct follow-up to the Basic web development
+					course, but is open to anyone with an existing, solid knowledge of 
+					HTML & CSS. The primary topic of this course is learning how to make 
+					websites that perform and look great on mobile devices AND desktop devices.
+					You'll start by taking the project from the basic course and getting it to look 
+					great on mobile without affecting the desktop version. 
+					$500 - Enrollment Openson March 1, 2019.
+					<ul>
+						<li>Mobile Design</li>
+						<li>Media Queries</li>
+						<li>Breakpoints</li>
+						<li>Orientations</li>
+						<li>Mobile Detection</li>
+					</ul>
+				</div>
+			</div>
+			<footer>*Note that PayPal requests for all Interface classes will indicate
+				our parent company, AIM Institute, with an email address of 
+				carolina@aiminstitute.org.
+
+			</footer>
+			<article id="about">
+				<h2>About</h2>
+				<div class="boxes">
+					<div class="side1">
+						<h3><img src="images/book.png" alt="" class="icon"></h3>
+						<h3>Our Story</h3>
+						<a href="https://interfaceschool.come">Interface Web School</a> Is Located
+						in Omaha, Nebraska, and has been teaching web technology courses live
+						nd in-person since 2014. As a start-up, we were free to develop our 
+						personal style of instruction that emphasizes the practical topics AND
+						experiences to help foster a deeper understadning of tech that goes beyond
+						just the syntax.
+
+						<p>
+							In 2017 Interface School was acquired by the AIM Institute. Aim's mission
+							is to grow, connect and inspire the tech talent community through educational
+							and career development initiatives. Our focus is to get people excited 
+							about technology and inspire them to pursue a tech career - which leads to abetter 
+							work force and ultimately lets communities to thrive.
+						</p>
+						
+					</div>
+					<div class="side2">
+						<h3><img src="images/service.png" alt="" class="icon"></h3>
+						<h3>Our Staff</h3>
+						Interface instructors are developers themselves with in-depth experience.
+						in the technologies they teach. Our senior instructor and curriculum
+						author Kent Stotherman has been a professional developer in over a dozen 
+						different computer languages throughout a career spanning nearly 40 years.
+						And most importantly, everyone at Interface Web School has an infectious
+						passion for tech and teaching it.
+						
+						<p>
+							Our career placement specialists assist local students with brushing
+							up their resumes and connecting with area employers. Just because class
+							is over doesn't mean you are!
+						</p>
+						<p>
+							As we like to say if you don't give up on learning, we won't give up on
+							teaching!
+						</p>
+					</div>
+				</div>
+		</article>
+		<article id="faq">
+			<h2>FAQ</h2>
+			<div class="boxes">
+				<div class="box">
+					<h3><img src="images/customer-service.png" alt="" class="icon"</h3>
+					<h3>Courses</h3>
+					<dl>
+						<dt>Do I need experience?</dt>
+						<dd>For the basics of Web Development Course, no - this course will
+							teach you everything you need to know. For the mobile Web Dev Course,
+							yes - you should have a solid understanding of HTML & CSS, including
+							using advanced selectors like nth-of-type and :target.
+						</dd>
+						<dt>DO I need to install any software?</dt>
+						<dd>
+							You only need Chrome - everythingwill be presented online, and you will
+							use our online development platform for all our coding work.
+						</dd>
+						<dt>Is the course hard?</dt>
+						<dd>
+							Maybe - kinda depends on you! The material is presented in a very 
+							step by step manner as it guides you through new topics while you are
+							developing a real website. Remember that these are also self-paced 
+							courses, so if you need to review a certain section multipple times
+							to really "get it" you can.
+						</dd>
+						<dt>How long is the course?</dt>
+						<dd>
+							Courses are open from the first of the month for 30 days, and each
+							course is divided into 8-10 sections, so you
+							typically have about 3 days on average to complete a section.
+							Each section can take anywhere from 1-4 hours to complete.
+						</dd>
+						<dt>What is the material like?</dt>
+						<dd><a href="sample.html" target="_blank">Here is a sample</a></dd>
+						<dt>Refunds</dt>
+						<dd>A 100% course refund may be requested within 24 hours of registraion</dd>
+					</dl>
+				</div>
+			</div>
+		</article>
 	</body>
 </html>
